added new image and section on page roletta

--- a/app/index.html
+++ b/app/index.html
@@ -256,7 +256,7 @@
 					в шоуруме в удобное для вас время</h4>
 				<p>Посмотрите продукцию вживую. Выберите удобное время, оставьте конактные данные и нажмите кнопку
 					"Записаться на презентацию</p>
-				<div class="calendar-section__block box-shadow">
+				<div class="calendar-section__block bg-white-shadow">
 					<form class="calendar-section__form">
 						<div class="calendar">
 							<div class="group calendar__header">
