--- a/app/roletta.html
+++ b/app/roletta.html
@@ -100,29 +100,29 @@
                             чтобы обеспечить высокую скорость и лучший сервис для Украины.</p>
                     </div>
                 </div>
-                <img src="image/roletta.png" alt="" class="roletta-header__img">
+                <img src="image/roletta/roletta.png" alt="" class="roletta-header__img">
                 <div class="row">
                     <div class="col-12 col-lg-3">
                         <div class="roletta-header__card">
-                            <img src="image/img-1.png" alt="">
+                            <img src="image/roletta/img-1.png" alt="">
                             <h4>Для окон</h4>
                         </div>
                     </div>
                     <div class="col-12 col-lg-3">
                         <div class="roletta-header__card">
-                            <img src="image/img-2.png" alt="">
+                            <img src="image/roletta/img-2.png" alt="">
                             <h4>Для дверей</h4>
                         </div>
                     </div>
                     <div class="col-12 col-lg-3">
                         <div class="roletta-header__card">
-                            <img src="image/img-3.png" alt="">
+                            <img src="image/roletta/img-3.png" alt="">
                             <h4>Для витрин</h4>
                         </div>
                     </div>
                     <div class="col-12 col-lg-3">
                         <div class="roletta-header__card">
-                            <img src="image/img-4.png" alt="">
+                            <img src="image/roletta/img-4.png" alt="">
                             <h4>Для гаражей</h4>
                         </div>
                     </div>
@@ -206,12 +206,120 @@
                 </div>
             </div>
             </div>
-
-            <div class="line"></div>
         </section>
+        <div class="line"></div>
 
         <section class="roletta-assortement">
+            <div class="container">
+                <h2 class="roletta-assortement__title title-section">В ассортименте 3 типа профиля разных цветов и
+                    любого размера</h2>
+                <div class="row">
+                    <div class="col-12 col-lg-4">
+                        <div class="roletta-assortement__card bg-white-shadow">
+                            <h4>Антивандальный, пенозаполненный</h4>
+                            <p>профиль с повышенной термозащитой.</p>
+                            <img src="image/roletta/profile-1.png" alt="">
+                            <small>Зимой теплопотери будут ниже на 4–6%, а летом может быть прохладнее до 9
+                                градусов.</small>
+                        </div>
+                    </div>
+                    <div class="col-12 col-lg-4">
+                        <div class="roletta-assortement__card bg-white-shadow">
+                            <h4>Экструдированный </h4>
+                            <p>экструдированный профиль с повышенной защитой от взлома</p>
+                            <img src="image/roletta/profile-2.png" alt="">
+                            <small>Идеально подходит тем, чья главная цель – безопасность.</small>
+                        </div>
+                    </div>
+                    <div class="col-12 col-lg-4">
+                        <div class="roletta-assortement__card bg-white-shadow">
+                            <h4>Решетчатый</h4>
+                            <p>решетчатый, просматриваемый профиль</p>
+                            <img src="image/roletta/profile-3.png" alt="">
+                            <small>Часто используют для витриню Изготавливается из прочного, экструдированного
+                                аллюминия.</small>
+                        </div>
+                    </div>
+                </div>
+                <div class="roletta-assortement__color bg-white-shadow">
+                    <div class="group-radio-input">
+                        <h3>Популярные цвета</h3>
+                        <label class="label-radio-input" style="background-color: #fff; border-color: #DFDFDF">
+                            <input type="radio" name="color">
+                            <span class="radio-input-checkmark"
+                                style="background-color: #fff; border-color: #DFDFDF"></span>
+                        </label>
+                        <label class="label-radio-input" style="background-color: #5C2401">
+                            <input type="radio" name="color">
+                            <span class="radio-input-checkmark" style="background-color: #5C2401"></span>
+                        </label>
+                        <label class="label-radio-input" style="background-color: #C4C5C5">
+                            <input type="radio" name="color">
+                            <span class="radio-input-checkmark" style="background-color: #C4C5C5"></span>
+                        </label>
+                        <label class="label-radio-input" style="background-color: #ECDED1">
+                            <input type="radio" name="color">
+                            <span class="radio-input-checkmark" style="background-color: #ECDED1"></span>
+                        </label>
+                        <label class="label-radio-input" style="background-color: #E2E2E2">
+                            <input type="radio" name="color">
+                            <span class="radio-input-checkmark" style="background-color: #E2E2E2"></span>
+                        </label>
+                        <label class="label-radio-input" style="background-color: #A34E24">
+                            <input type="radio" name="color">
+                            <span class="radio-input-checkmark" style="background-color: #A34E24"></span>
+                        </label>
+                        <label class="label-radio-input" style="background-color: #865522">
+                            <input type="radio" name="color">
+                            <span class="radio-input-checkmark" style="background-color: #865522"></span>
+                        </label>
+                        <label class="label-radio-input" style="background-color: #32454D">
+                            <input type="radio" name="color">
+                            <span class="radio-input-checkmark" style="background-color: #32454D"></span>
+                        </label>
+                        <label class="label-radio-input" style="background-color: #21201F">
+                            <input type="radio" name="color">
+                            <span class="radio-input-checkmark" style="background-color: #21201F"></span>
+                        </label>
+                        <label class="label-radio-input" style="background-color: #003C80">
+                            <input type="radio" name="color">
+                            <span class="radio-input-checkmark" style="background-color: #003C80"></span>
+                        </label>
+                        <label class="label-radio-input" style="background-color: #005D31">
+                            <input type="radio" name="color">
+                            <span class="radio-input-checkmark" style="background-color: #005D31"></span>
+                        </label>
+                        <label class="label-radio-input" style="background-color: #EFA400">
+                            <input type="radio" name="color">
+                            <span class="radio-input-checkmark" style="background-color: #EFA400"></span>
+                        </label>
+                    </div>
+                    <img src="image/roletta/roletta-2.png" alt="">
+                </div>
+            </div>
+        </section>
 
+        <section class="roletta-download-catalog download-catalog">
+            <div class="container">
+                <div class="download-catalog__wrap">
+                    <div class="row">
+                        <div class="col-12 col-lg-5">
+                            <h3 class="download-catalog__title">Скачайте прайсы с актуальными ценами на весь ассортимент
+                            </h3>
+                            <p>Цены обновлены 2 дня назад (28.05.2019)</p>
+                            <form class="download-catalog__form">
+                                <input type="text" class="input-bark" placeholder="Введите ваше имя">
+                                <input type="text" class="input-bark" placeholder="Введите ваш телефон">
+                                <input type="text" class="input-bark" placeholder="Введите ваш E-mail">
+                                <button type="submit" class="btn btn-red">Скачать</button>
+                            </form>
+                        </div>
+                        <div class="col-12 col-lg-7">
+                            <img src="image/image-5.png" alt="" class="download-catalog__img">
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
 
     </main>
