added new image and section on page

--- a/app/roletta.html
+++ b/app/roletta.html
@@ -322,6 +322,97 @@
             </div>
         </section>
 
+        <section class="roletta-control">
+            <div class="container">
+                <div class="roletta-control__header">
+                    <h2 class="title-section">Есть ручное и автоматическое управление роллетами</h2>
+                    <p>Управление подбирается в зависимости от размера
+                        и веса роллет, а также от желаемого уровня комфорта
+                        и безопасности</p>
+                    <img src="image/roletta/remote-controller.png" alt="">
+                </div>
+            </div>
+            <div class="line"></div>
+            <div class="container">
+                <div class="roletta-control__auto">
+                    <h3 class="roletta-control__subtitle"><span>01</span>Автоматическое управление</h3>
+                    <p>Одним нажатием кнопки, не вставая с дивана, можно управлять всеми роллетами одновременно либо
+                        каждой отдельно.</p>
+                    <div class="roletta-control__group-list">
+                        <ul class="roletta-control__list">
+                            <li>
+                                <span class="circle">01</span>
+                                <p>Программируйте время <br /> подьема и опускания роллет</p>
+                            </li>
+                            <li>
+                                <span class="circle">02</span>
+                                <p>Режим иммитации <br /> присутствия хозяев в доме
+                                    <small>Время подъема и опускания роллет сдвигается случайным образом</small>
+                                </p>
+                            </li>
+                            <li>
+                                <span class="circle">03</span>
+                                <p>Управление роллетами <br /> с помощью датчика тепла и света
+                                    <small>в зависимости от температуры в помещении и интенсивности солнечного
+                                        света.</small>
+                                </p>
+                            </li>
+                        </ul>
+                        <ul class="roletta-control__list">
+                            <li>
+                                <span class="circle">04</span>
+                                <p>Управление роллетами <br /> в зависимости от погодных условий</p>
+                            </li>
+                            <li>
+                                <span class="circle">05</span>
+                                <p>Установка <br /> оптимального положения
+                                    <small>что позволяет частично опустить роллету для создания тени.</small>
+                                </p>
+                            </li>
+                        </ul>
+                    </div>
+                    <p class="roletta-control__text-big">Електропривод бывает двух типов,
+                        с возможностью аварийного открытия
+                        при отсутствии електричества и без неё.</p>
+                    <p><b>Управлять автоматикой можно по разному</b></p>
+                    <div class="row">
+                        <div class="col-12 col-lg-3">
+                            <div class="roletta-control__img-circle">
+                                <div class="circle">
+                                    <img src="image/roletta/image-1.png" alt="">
+                                </div>
+                                <p>С пульта</p>
+                            </div>
+                        </div>
+                        <div class="col-12 col-lg-3">
+                            <div class="roletta-control__img-circle">
+                                <div class="circle">
+                                    <img src="image/roletta/image-2.png" alt="">
+                                </div>
+                                <p>Обычным клавишным выключателем</p>
+                            </div>
+                        </div>
+                        <div class="col-12 col-lg-3">
+                            <div class="roletta-control__img-circle">
+                                <div class="circle">
+                                    <img src="image/roletta/image-3.png" alt="">
+                                </div>
+                                <p>Замковой выключатель</p>
+                            </div>
+                        </div>
+                        <div class="col-12 col-lg-3">
+                            <div class="roletta-control__img-circle">
+                                <div class="circle">
+                                    <img src="image/roletta/image-4.png" alt="">
+                                </div>
+                                <p>Система Nero</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
     </main>
 
     <footer class="footer">
