responsive for mob

--- a/app/roletta.html
+++ b/app/roletta.html
@@ -102,25 +102,25 @@
                 </div>
                 <img src="image/roletta/roletta.png" alt="" class="roletta-header__img">
                 <div class="row">
-                    <div class="col-12 col-md-3">
+                    <div class="col-12 col-sm-6 col-md-3">
                         <div class="roletta-header__card">
                             <img src="image/roletta/img-1.png" alt="">
                             <h4>Для окон</h4>
                         </div>
                     </div>
-                    <div class="col-12 col-md-3">
+                    <div class="col-12 col-sm-6 col-md-3">
                         <div class="roletta-header__card">
                             <img src="image/roletta/img-2.png" alt="">
                             <h4>Для дверей</h4>
                         </div>
                     </div>
-                    <div class="col-12 col-md-3">
+                    <div class="col-12 col-sm-6 col-md-3">
                         <div class="roletta-header__card">
                             <img src="image/roletta/img-3.png" alt="">
                             <h4>Для витрин</h4>
                         </div>
                     </div>
-                    <div class="col-12 col-md-3">
+                    <div class="col-12 col-sm-6 col-md-3">
                         <div class="roletta-header__card">
                             <img src="image/roletta/img-4.png" alt="">
                             <h4>Для гаражей</h4>
@@ -146,52 +146,52 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-12 col-md-4">
+                    <div class="col-6 col-md-4">
                         <div class="function-roletta__item">
                             <div class="circle">
                                 <img src="image/icons/shining.svg" alt="shining">
                             </div>
-                            <p>Красота и эстетика</p>
+                            <p>Красота <br /> и эстетика</p>
                         </div>
                     </div>
-                    <div class="col-12 col-md-4">
+                    <div class="col-6 col-md-4">
                         <div class="function-roletta__item">
                             <div class="circle">
                                 <img src="image/icons/sun.svg" alt="sun">
                             </div>
-                            <p>Защита от слонца</p>
+                            <p>Защита <br /> от слонца</p>
                         </div>
                     </div>
-                    <div class="col-12 col-md-4">
+                    <div class="col-6 col-md-4">
                         <div class="function-roletta__item">
                             <div class="circle">
                                 <img src="image/icons/half-battery.svg" alt="half-battery">
                             </div>
-                            <p>Экономия энергии</p>
+                            <p>Экономия <br /> энергии</p>
                         </div>
                     </div>
-                    <div class="col-12 col-md-4">
+                    <div class="col-6 col-md-4">
                         <div class="function-roletta__item">
                             <div class="circle">
                                 <img src="image/icons/eye.svg" alt="eye">
                             </div>
-                            <p>Защита от посторонних глаз</p>
+                            <p>Защита от <br /> посторонних глаз</p>
                         </div>
                     </div>
-                    <div class="col-12 col-md-4">
+                    <div class="col-6 col-md-4">
                         <div class="function-roletta__item">
                             <div class="circle">
                                 <img src="image/icons/thunderstorm-rain.svg" alt="thunderstorm-rain">
                             </div>
-                            <p>Защита от непогоды</p>
+                            <p>Защита <br /> от непогоды</p>
                         </div>
                     </div>
-                    <div class="col-12 col-md-4">
+                    <div class="col-6 col-md-4">
                         <div class="function-roletta__item">
                             <div class="circle">
                                 <img src="image/icons/noise.svg" alt="noise">
                             </div>
-                            <p>Защита от шума</p>
+                            <p>Защита <br /> от шума</p>
                         </div>
                     </div>
                 </div>
@@ -370,12 +370,15 @@
                             </li>
                         </ul>
                     </div>
-                    <p class="roletta-control__text-big">Електропривод бывает двух типов,
-                        с возможностью аварийного открытия
-                        при отсутствии електричества и без неё.</p>
+                    <div class="roletta-control__text-big">
+                        <p>Електропривод бывает двух типов,
+                            с возможностью аварийного открытия
+                            при отсутствии електричества и без неё.</p>
+                        <img src="image/roletta/image-bg.png" alt="">
+                    </div>
                     <p><b>Управлять автоматикой можно по разному</b></p>
                     <div class="row">
-                        <div class="col-12 col-md-3">
+                        <div class="col-6 col-md-3">
                             <div class="roletta-control__img-circle">
                                 <div class="circle">
                                     <img src="image/roletta/image-1.png" alt="">
@@ -383,7 +386,7 @@
                                 <p>С пульта</p>
                             </div>
                         </div>
-                        <div class="col-12 col-md-3">
+                        <div class="col-6 col-md-3">
                             <div class="roletta-control__img-circle">
                                 <div class="circle">
                                     <img src="image/roletta/image-2.png" alt="">
@@ -391,7 +394,7 @@
                                 <p>Обычным клавишным выключателем</p>
                             </div>
                         </div>
-                        <div class="col-12 col-md-3">
+                        <div class="col-6 col-md-3">
                             <div class="roletta-control__img-circle">
                                 <div class="circle">
                                     <img src="image/roletta/image-3.png" alt="">
@@ -399,7 +402,7 @@
                                 <p>Замковой <br /> выключатель</p>
                             </div>
                         </div>
-                        <div class="col-12 col-md-3">
+                        <div class="col-6 col-md-3">
                             <div class="roletta-control__img-circle">
                                 <div class="circle">
                                     <img src="image/roletta/image-4.png" alt="">
@@ -414,7 +417,7 @@
                 <div class="container">
                     <h3 class="roletta-control__subtitle"><span>02</span>Ручное управление бывает 4 видов</h3>
                     <div class="row">
-                        <div class="col-12 col-md-3">
+                        <div class="col-6 col-md-3">
                             <div class="roletta-control__img-circle">
                                 <div class="circle">
                                     <img src="image/roletta/image-5.png" alt="">
@@ -422,7 +425,7 @@
                                 <p>Пружинный <br /> замок</p>
                             </div>
                         </div>
-                        <div class="col-12 col-md-3">
+                        <div class="col-6 col-md-3">
                             <div class="roletta-control__img-circle">
                                 <div class="circle">
                                     <img src="image/roletta/image-6.png" alt="">
@@ -430,7 +433,7 @@
                                 <p>Кассетный <br /> шнур</p>
                             </div>
                         </div>
-                        <div class="col-12 col-md-3">
+                        <div class="col-6 col-md-3">
                             <div class="roletta-control__img-circle">
                                 <div class="circle">
                                     <img src="image/roletta/image-7.png" alt="">
@@ -438,7 +441,7 @@
                                 <p>Шнуровой <br /> укладчик</p>
                             </div>
                         </div>
-                        <div class="col-12 col-md-3">
+                        <div class="col-6 col-md-3">
                             <div class="roletta-control__img-circle">
                                 <div class="circle">
                                     <img src="image/roletta/image-8.png" alt="">
@@ -504,7 +507,7 @@
                         <h2 class="title-section">Производство заказа занимает 3-7 дней</h2>
                     </div>
                     <div class="col-12 col-md-5 offset-md-1">
-                        <h3 class="order-takes__subtitle">Нужно срочно? Сделаем за 1 день</h3>
+                        <h3 class="order-takes__subtitle">Нужно срочно? <br /> Сделаем за 1 день</h3>
                     </div>
                 </div>
             </div>
@@ -529,25 +532,25 @@
                 </div>
 
                 <div class="row">
-                    <div class="col-12 col-md-3">
+                    <div class="col-6 col-md-3">
                         <div class="ready-order__card bg-white-shadow">
                             <span class="ready-order__number">02</span>
                             <p>Рассчет</p>
                         </div>
                     </div>
-                    <div class="col-12 col-md-3">
+                    <div class="col-6 col-md-3">
                         <div class="ready-order__card bg-white-shadow">
                             <span class="ready-order__number">03</span>
                             <p>Оплата</p>
                         </div>
                     </div>
-                    <div class="col-12 col-md-3">
+                    <div class="col-6 col-md-3">
                         <div class="ready-order__card bg-white-shadow">
                             <span class="ready-order__number">04</span>
                             <p>Производство</p>
                         </div>
                     </div>
-                    <div class="col-12 col-md-3">
+                    <div class="col-6 col-md-3">
                         <div class="ready-order__card bg-white-shadow">
                             <span class="ready-order__number">05</span>
                             <p>Доставка или самовывоз</p>
