modified promotions section

--- a/app/index.html
+++ b/app/index.html
@@ -155,11 +155,11 @@
 					<form class="price__form">
 						<div class="spinner">
 							<span>Ширина, мм.</span>
-							<input type="number" min="100" max="10000" step="100" value="1500">
+							<input type="number" min="400" max="10000" step="1" value="1500">
 						</div>
 						<div class="spinner">
 							<span>Высота, мм.</span>
-							<input type="number" min="100" max="10000" step="100" value="2500">
+							<input type="number" min="400" max="10000" step="1" value="2500">
 						</div>
 						<a href="#" class="btn btn-red">Расчитать стоимость</a>
 					</form>
@@ -301,7 +301,7 @@
 				<h2 class="title-text-border">Акции</h2>
 				<div class="slider-promotions cards-dark">
 					<div class="slider-promotions__item d-flex">
-						<div class="wrrap">
+						<div class="promotions__desc">
 							<h3 class="promotions__title">Описание акции. Коротко
 								и по сути. Остальное внутри!
 								Открываешь и смотришь</h3>
@@ -315,12 +315,12 @@
 								</ul>
 							</div>
 						</div>
-						<div class="slider-promotions__image">
+						<div class="promotions__image">
 							<img src="image/promotions/image-1.png" alt="">
 						</div>
 					</div>
 					<div class="slider-promotions__item d-flex">
-						<div class="wrrap">
+						<div class="promotions__desc">
 							<h3 class="promotions__title">Описание акции. Коротко
 								и по сути. Остальное внутри!
 								Открываешь и смотришь</h3>
@@ -334,12 +334,12 @@
 								</ul>
 							</div>
 						</div>
-						<div class="slider-promotions__image">
+						<div class="promotions__image">
 							<img src="image/promotions/image-2.png" alt="">
 						</div>
 					</div>
 					<div class="slider-promotions__item d-flex">
-						<div class="wrrap">
+						<div class="promotions__desc">
 							<h3 class="promotions__title">Описание акции. Коротко
 								и по сути. Остальное внутри!
 								Открываешь и смотришь</h3>
@@ -353,12 +353,12 @@
 								</ul>
 							</div>
 						</div>
-						<div class="slider-promotions__image">
+						<div class="promotions__image">
 							<img src="image/promotions/image-3.png" alt="">
 						</div>
 					</div>
 					<div class="slider-promotions__item d-flex">
-						<div class="wrrap">
+						<div class="promotions__desc">
 							<h3 class="promotions__title">Описание акции. Коротко
 								и по сути. Остальное внутри!
 								Открываешь и смотришь</h3>
@@ -372,7 +372,7 @@
 								</ul>
 							</div>
 						</div>
-						<div class="slider-promotions__image">
+						<div class="promotions__image">
 							<img src="image/promotions/image-4.png" alt="">
 						</div>
 					</div>
