--- a/app/promotions.html
+++ b/app/promotions.html
@@ -91,8 +91,8 @@
 			<div class="container">
 				<h2 class="title-text-border">Акции</h2>
 				<div class="promotions_cards ">
-					<div class="slider-promotions__item d-flex cards-dark">
-						<div class="wrrap">
+					<div class="promotions__item cards-dark d-flex">
+						<div class="promotions__desc">
 							<h3 class="promotions__title">Описание акции. Коротко
 								и по сути. Остальное внутри!
 								Открываешь и смотришь</h3>
@@ -106,12 +106,12 @@
 								</ul>
 							</div>
 						</div>
-						<div class="slider-promotions__image">
+						<div class="promotions__image">
 							<img src="image/promotions/image-1.png" alt="">
 						</div>
 					</div>
-					<div class="slider-promotions__item d-flex cards-dark">
-						<div class="wrrap">
+					<div class="promotions__item cards-dark d-flex">
+						<div class="promotions__desc">
 							<h3 class="promotions__title">Описание акции. Коротко
 								и по сути. Остальное внутри!
 								Открываешь и смотришь</h3>
@@ -125,12 +125,12 @@
 								</ul>
 							</div>
 						</div>
-						<div class="slider-promotions__image">
+						<div class="promotions__image">
 							<img src="image/promotions/image-2.png" alt="">
 						</div>
 					</div>
-					<div class="slider-promotions__item d-flex cards-dark">
-						<div class="wrrap">
+					<div class="promotions__item cards-dark d-flex">
+						<div class="promotions__desc">
 							<h3 class="promotions__title">Описание акции. Коротко
 								и по сути. Остальное внутри!
 								Открываешь и смотришь</h3>
@@ -144,12 +144,12 @@
 								</ul>
 							</div>
 						</div>
-						<div class="slider-promotions__image">
+						<div class="promotions__image">
 							<img src="image/promotions/image-3.png" alt="">
 						</div>
 					</div>
-					<div class="slider-promotions__item d-flex cards-dark">
-						<div class="wrrap">
+					<div class="promotions__item cards-dark d-flex">
+						<div class="promotions__desc">
 							<h3 class="promotions__title">Описание акции. Коротко
 								и по сути. Остальное внутри!
 								Открываешь и смотришь</h3>
@@ -163,7 +163,7 @@
 								</ul>
 							</div>
 						</div>
-						<div class="slider-promotions__image">
+						<div class="promotions__image">
 							<img src="image/promotions/image-4.png" alt="">
 						</div>
 					</div>
