--- a/app/calculator.html
+++ b/app/calculator.html
@@ -114,29 +114,215 @@
                     </div>
                 </div>
                 <div class="calculator__color bg-white-shadow">
-                    <p>Цена указана для этих цветов</p>
+                    <p>Цена указана <br /> для этих цветов</p>
                     <ul class="calculator__color_list">
                         <li>
                             <span style="background-color: #fff"></span>
                             Белый
                         </li>
                         <li>
-                            <span style="background-color: #fff"></span>
+                            <span style="background-color: #5C2401"></span>
                             Дуб
                         </li>
                         <li>
-                            <span style="background-color: #fff"></span>
+                            <span style="background-color: #C4C5C5"></span>
                             Металик
                         </li>
                         <li>
-                            <span style="background-color: #fff"></span>
+                            <span style="background-color: #ECDED1"></span>
                             Бежевый
                         </li>
                         <li>
-                            <span style="background-color: #fff"></span>
+                            <span style="background-color: #E2E2E2"></span>
                             Серый
                         </li>
                     </ul>
+                </div>
+                <div class="table__wrap">
+                    <h5 class="table__title d-flex justify-content-between align-items-center">
+                        Trend
+                        <small> ролеты из профилей серии Trend, ТМ "Alutech"</small>
+                    </h5>
+                    <div class="table__header d-flex align-items-center">
+                        <div class="table__col-6">Типы профилей для изготовления полотна</div>
+                        <div class="table__col-6 ">
+                            <div class="table__col-12">
+                                Тип управления ролетой
+                            </div>
+                            <div class="table__col-12 d-flex justify-content-between">
+                                <span class="table__col-4">Пружина/ключ</span>
+                                <span class="table__col-4">Шнур/касета</span>
+                                <span class="table__col-4">Двигатель</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="table__body bg-white-shadow">
+                        <div class="table__row d-flex align-items-center">
+                            <div class="table__col-4"><img src="image/icons/question-mark.svg" alt="question-mark">
+                                Пенонаполненый профиль</div>
+                            <ul class="table__col-2">
+                                <li>PD/39N</li>
+                                <li>PD/45N</li>
+                                <li>PD/55mN</li>
+                                <li>PD/77</li>
+                            </ul>
+                            <ul class="table__col-2">
+                                <li><a href="#">3 564 грн.</a></li>
+                                <li><a href="#">3 565 грн.</a></li>
+                                <li><a href="#">3 566 грн.</a></li>
+                                <li><a href="#"></a></li>
+                            </ul>
+                            <ul class="table__col-2">
+                                <li><a href="#">3 742,2 грн.</a></li>
+                                <li><a href="#">3 743,25 грн.</a></li>
+                                <li><a href="#">3 744,3 грн.</a></li>
+                                <li><a href="#"></a></li>
+                            </ul>
+                            <ul class="table__col-2">
+                                <li><a href="#">4 276,8 грн.</a></li>
+                                <li><a href="#">4 278 грн.</a></li>
+                                <li><a href="#">4 279,2 грн.</a></li>
+                                <li><a href="#"></a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="table__wrap">
+                    <h5 class="table__title d-flex justify-content-between align-items-center">
+                        Prestige
+                        <small> ролеты из профилей серии Prestige, ТМ "Alutech"</small>
+                    </h5>
+                    <div class="table__header d-flex align-items-center">
+                        <div class="table__col-6">Типы профилей для изготовления полотна</div>
+                        <div class="table__col-6 ">
+                            <div class="table__col-12">
+                                Тип управления ролетой
+                            </div>
+                            <div class="table__col-12 d-flex justify-content-between">
+                                <span class="table__col-4">Пружина</span>
+                                <span class="table__col-4">Шнур</span>
+                                <span class="table__col-4">Двигатель</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="table__body bg-white-shadow">
+                        <div class="table__row d-flex align-items-center">
+                            <div class="table__col-4"><img src="image/icons/question-mark.svg" alt="question-mark">
+                                Пенонаполненый профиль</div>
+                            <ul class="table__col-2">
+                                <li>AR/40N</li>
+                                <li>AR/555N</li>
+                                <li>AG/77</li>
+                            </ul>
+                            <ul class="table__col-2">
+                                <li><a href="#">3 564 грн.</a></li>
+                                <li><a href="#">3 565 грн.</a></li>
+                                <li><a href="#">3 566 грн.</a></li>
+                            </ul>
+                            <ul class="table__col-2">
+                                <li><a href="#">3 742,2 грн.</a></li>
+                                <li><a href="#">3 743,25 грн.</a></li>
+                                <li><a href="#">3 744,3 грн.</a></li>
+                            </ul>
+                            <ul class="table__col-2">
+                                <li><a href="#">4 276,8 грн.</a></li>
+                                <li><a href="#">4 278 грн.</a></li>
+                                <li><a href="#">4 279,2 грн.</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="table__wrap">
+                    <h5 class="table__title d-flex justify-content-between align-items-center">
+                        Security
+                        <small> ролеты из решетчатого профиля Security, ТМ "Alutech"</small>
+                    </h5>
+                    <div class="table__header d-flex align-items-center">
+                        <div class="table__col-6">Типы профилей для изготовления полотна</div>
+                        <div class="table__col-6 ">
+                            <div class="table__col-12">
+                                Тип управления ролетой
+                            </div>
+                            <div class="table__col-12 d-flex justify-content-between">
+                                <span class="table__col-4">Пружина</span>
+                                <span class="table__col-4">Шнур</span>
+                                <span class="table__col-4">Двигатель</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="table__body bg-white-shadow">
+                        <div class="table__row d-flex align-items-center">
+                            <div class="table__col-4"><img src="image/icons/question-mark.svg" alt="question-mark">
+                                Экструдированный профиль</div>
+                            <ul class="table__col-2">
+                                <li>AER44/mS</li>
+                                <li>AER44/S</li>
+                                <li>AER55/mS</li>
+                                <li>AER55/S</li>
+                            </ul>
+                            <ul class="table__col-2">
+                                <li><a href="#">3 564 грн.</a></li>
+                                <li><a href="#">3 565 грн.</a></li>
+                                <li><a href="#">3 566 грн.</a></li>
+                                <li><a href="#">3 564 грн.</a></li>
+                            </ul>
+                            <ul class="table__col-2">
+                                <li><a href="#">3 742,2 грн.</a></li>
+                                <li><a href="#">3 743,25 грн.</a></li>
+                                <li><a href="#">3 744,3 грн.</a></li>
+                                <li><a href="#">3 742,2 грн.</a></li>
+                            </ul>
+                            <ul class="table__col-2">
+                                <li><a href="#">4 276,8 грн.</a></li>
+                                <li><a href="#">4 278 грн.</a></li>
+                                <li><a href="#">4 279,2 грн.</a></li>
+                                <li><a href="#">4 276,8 грн.</a></li>
+                            </ul>
+                        </div>
+                        <div class="table__row d-flex align-items-center">
+                            <div class="table__col-4"><img src="image/icons/question-mark.svg" alt="question-mark">
+                                Решетчатый профиль</div>
+                            <ul class="table__col-2">
+                                <li>AEG56</li>
+                                <li>AEG84</li>
+                            </ul>
+                            <ul class="table__col-2">
+                                <li><a href="#">3 567 грн.</a></li>
+                                <li><a href="#">4 555 грн.</a></li>
+                            </ul>
+                            <ul class="table__col-2">
+                                <li><a href="#">3 745,35 грн.</a></li>
+                                <li><a href="#">4 782,75 грн.</a></li>
+                            </ul>
+                            <ul class="table__col-2">
+                                <li><a href="#">4 280,4 грн.</a></li>
+                                <li><a href="#">5 466 грн.</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="download-catalog">
+            <div class="container">
+                <div class="download-catalog__wrap bg-white-shadow">
+                    <div class="row">
+                        <div class="col-12 col-md-5 offset-md-1">
+                            <h3 class="download-catalog__title">Скачайте прайсы с актуальными ценами на весь ассортимент
+                            </h3>
+                            <p>Цены обновлены 2 дня назад (28.05.2019)</p>
+                            <form class="download-catalog__form">
+                                <input type="text" class="input-light" placeholder="Введите ваше имя">
+                                <input type="text" class="input-light" placeholder="Введите ваш телефон">
+                                <input type="text" class="input-light" placeholder="Введите ваш E-mail">
+                                <button type="submit" class="btn btn-red">Скачать</button>
+                            </form>
+                        </div>
+                        <div class="col-12 col-md-6">
+                            <img src="image/image-5.png" alt="" class="download-catalog__img">
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
