open promotions first changes

--- a/app/promotion_open.html
+++ b/app/promotion_open.html
@@ -88,8 +88,19 @@
 	<main>
 	
 		<section class="promotions_open">
-			<div class="container">
-				<div class="top_promoition">
+			<div class="top_block">
+				<div class="container">
+					<div class="row">
+						<div class="col-lg-9">
+							<p class="top_title">
+									Описание акции. Коротко и по сути. Остальное внутри! Открываешь и смотришь
+							</p>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="top_promotion">
+				<div class="container">
                     <div class="row">
                         <div class="col-lg-6">
                             <div class="text_promotion">
@@ -114,7 +125,9 @@
 							</div>
                         </div>
                     </div>
-                </div>
+				</div>
+			</div>
+			<div class="container">
 				<div class="letter_form_block">
 							<div class="img_letter_wraper">
 								<img src="image/letter.png" alt="">
